apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'maven-publish'
apply plugin: 'jacoco'

repositories {
    mavenCentral()
}

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    ignoreFailures = true
    useJUnitPlatform()
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', 'src/generated/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }

    test {
        java {
            srcDirs = ['src/test/java']
        }
        resources {
            srcDirs = ['src/test/resources']
        }
    }

    scripts {
        java.srcDirs = ['src/scripts']
    }
}

test {
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        html.required = true
    }
}

dependencies {
    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.5.2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    implementation group: 'org.apache.jena', name: 'jena-base', version: '5.0.0'
    implementation group: 'org.apache.jena', name: 'jena-core', version: '5.0.0'
    implementation group: 'org.apache.jena', name: 'jena-arq', version: '5.0.0'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.3'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.3'

    scriptsImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    scriptsImplementation group: 'org.apache.jena', name: 'jena-base', version: '5.0.0'
    scriptsImplementation group: 'org.apache.jena', name: 'jena-core', version: '5.0.0'
    scriptsImplementation group: 'org.apache.jena', name: 'jena-arq', version: '5.0.0'

    scriptsImplementation sourceSets.main.output
}

task generateUnits(type: JavaExec) {
    classpath = sourceSets.scripts.runtimeClasspath
    main = 'CodeGenerator'
    def path = file('/src/generated').absolutePath
    args = [path]
}

task generateDimensions(type: JavaExec) {

}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = 'org.encyclopediasemantica'
            artifactId = 'your-artifact-id'
            version = '0.0.1'

            pom {
                name = 'ES Quantities Java'
                description = 'A description of your project'
                url = 'http://www.encyclopediasemantica.com'

                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }

                developers {
                    developer {
                        id = 'OmarElabd'
                        name = 'Omar Elabd'
                    }
                }

                scm {
                    connection = 'scm:git:git://github.com/OmarElabd/es-quantities-java.git'
                    developerConnection = 'scm:git:ssh://github.com:OmarElabd/es-quantities-java.git'
                    url = 'https://github.com/OmarElabd/es-quantities-java'
                }
            }
        }
    }

    repositories {
        maven {
            name = 'myRepo'
            url = uri('http://my.maven.repo/repository/maven-releases/')
            credentials {
                username = project.findProperty("mavenUser") ?: ""
                password = project.findProperty("mavenPassword") ?: ""
            }
        }
    }
}